k8s/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  labels:
    name: app-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.global-static-ip-name: playgrund-sandbox
spec:
  defaultBackend:
    service:
      name: playground-sandbox-fr-svc
      port:
        name: app-fr
  rules:
    - host: 34.110.187.191.nip.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: playground-sandbox-fr-svc
                port:
                  name: app-fr
    - host: api.34.110.187.191.nip.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: app-svc
                port:
                  name: app-port
    - host: "*.project.34.110.187.191.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx
                port:
                  name: ng-sandbox-port
    - host: "*.vscode.34.110.187.191.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx
                port:
                  name: ng-vscode-port
